# backend

./: db.sqlite3  manage.py  pyproject.toml  requirements.txt
GKMS/: settings.py  urls.py  wsgi.py
gmksapi/: admin.py  apps.py  form_data.py  forms.py  models.py  serializers.py  signals.py  urls.py  views.py
gmksapi/migrations/: 0001_initial.py  0002_alter_data_loc_alter_message_district.py  0003_alter_data_loc_alter_message_district.py  0004_alter_data_loc_alter_message_district.py  0005_alter_data_loc_alter_message_district.py  0006_alter_data_loc_alter_message_district.py  0007_alter_data_loc_alter_message_district.py
staticfiles/: staticfiles.json
